Fix for OSD grid overflowing the preview area as per #3202 (#3203)
Fix for OSD grid overflowing the preview error due to the invdividual images not shrinking below a fixed width. Fixes #3202 / https://github.com/betaflight/betaflight-configurator/issues/3202

--- a/src/css/tabs/osd.less
+++ b/src/css/tabs/osd.less
@@ -217,6 +217,8 @@
 			border: 1px solid transparent;
 			img {
 				flex: 1 1 auto;
+				max-width: 100%;
+				height: auto;
 			}
 		}
 		.char[draggable="true"] {
